--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body {
   font-weight: 400;
   padding: 0;
   margin: 0;
+  letter-spacing: 2px;
 }
 
 * {
@@ -18,6 +19,7 @@ a {
   text-decoration: none;
   color: white;
 }
+
 a:hover {
   cursor: pointer;
 }
@@ -39,6 +41,7 @@ header {
   width: 1140px;
   margin: 0 auto;
 }
+
 .nav_bar a {
   display: inline-block;
   margin-right: 40px;
@@ -61,10 +64,12 @@ header {
   font-family: 'Roboto', sans-serif;
   font-weight: 500;
 }
+
 .title {
   font-family: 'Montserrat', sans-serif;
   text-align: center;
 }
+
 .title h1 {
   font-size: 52px;
   font-weight: normal;
@@ -92,6 +97,7 @@ header {
 .scroll {
   transition: 0.5s;
 }
+
 .scroll:hover {
   color: #9a9a9a;
 }
@@ -211,6 +217,7 @@ button:hover {
   flex-direction: column;
   align-items: center;
 }
+
 .category_item h3 {
   flex-wrap: wrap;
   width: 130px;
@@ -246,9 +253,11 @@ div.category_item:last-child {
 .info_button {
   padding-bottom: 6px;
 }
+
 .break {
   margin-bottom: 274px;
 }
+
 .cosmonaut {
   position: absolute;
   top: 47em;
@@ -257,9 +266,77 @@ div.category_item:last-child {
 }
 
 .trip_videoblog h2 {
-width: 50%;
+  width: 50%;
 }
 
 .video {
   text-align: center;
+  margin-bottom: 10em;
+}
+
+.info_block .galaxy {
+  position: absolute;
+  opacity: 0.8;
+  top: -15em;
+  left: -35em;
+  z-index: -2;
+}
+
+.form_area {
+  display: flex;
+  flex-direction: column;
+justify-content: center;
+  position: relative;
+
+}
+
+.form_area h2 {
+  align-self: center;
+  font-size: 28px;
+  font-weight: 500;
+  letter-spacing: 8px;
+  width: 50%;
+  text-align: start;
+  margin: 0;
+}
+
+.form_area p {
+  align-self: center;
+  text-align: start;
+  margin-bottom: 70px;
+  width: 50%;
+  font-size: 16px;
+  font-weight: normal;
+  line-height: 1.76;
+  letter-spacing: 2px;
+}
+
+form {
+  width: 50%;
+  align-self: center;
+}
+
+.form_area input {
+  width: 100%;
+  background: none;
+  outline: none;
+  color: white;
+  padding: 10px;
+  border: none;
+  border-bottom: 1px solid white;
+  margin-bottom: 40px;
+
+}
+
+input[placeholder] {
+  color: white;
+  opacity: 1;
+}
+
+input[name="message"] {
+  margin-bottom: 90px;
+}
+
+.form_button {
+  margin-bottom: 130px;
 }
