--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ header {
   transition: 0.5s;
 }
 
-.scroll:hover {
+.scroll:hover, .scroll img:hover {
   color: #9a9a9a;
 }
 
@@ -218,6 +218,20 @@ button:hover {
   align-items: center;
 }
 
+.flex_icons img:hover {
+  animation: flip-diagonal-2-br 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+}
+@keyframes flip-diagonal-2-br {
+  0% {
+    -webkit-transform: rotate3d(-1, 1, 0, 0deg);
+    transform: rotate3d(-1, 1, 0, 0deg);
+  }
+  100% {
+    -webkit-transform: rotate3d(-1, 1, 0, 180deg);
+    transform: rotate3d(-1, 1, 0, 180deg);
+  }
+}
+
 .category_item h3 {
   flex-wrap: wrap;
   width: 130px;
@@ -255,7 +269,7 @@ div.category_item:last-child {
 }
 
 .break {
-  margin-bottom: 274px;
+  margin-bottom: 220px;
 }
 
 .cosmonaut {
@@ -330,6 +344,10 @@ form {
 
 input[placeholder] {
   color: white;
+  opacity: 0.7;
+}
+
+input:focus {
   opacity: 1;
 }
 
@@ -364,6 +382,29 @@ input[name="message"] {
 .icons_social a {
   margin-left: 86px;
 }
+.icons_social img:hover, .scroll img:hover {
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  backface-visibility: hidden;
+  perspective: 1000px;
+}
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
 
 .fist_row {
   margin-bottom: 12px;
@@ -381,14 +422,31 @@ input[name="message"] {
 }
 .top {
   position: absolute;
-  transition: 0.5s;
-  background-color: rgba(154, 154, 154, 0.47);
-  border-radius: 5px;
-  padding: 7px 9px 5px 9px;
+  transition: 0.7s;
+  background-color: rgba(154, 154, 154, 0.31);
+  border-radius: 2px;
+  padding: 14px 14px 10px 14px;
   right: 3em;
   bottom: 12em;
-
 }
 .top:hover {
- transform: rotate(180deg);
+  border-radius: 50%;
+  animation: rotate-scale-up 0.65s linear both;
+ /*transform: rotate(180deg);*/
 }
+
+@keyframes rotate-scale-up {
+  0% {
+    -webkit-transform: scale(1) rotateZ(0);
+    transform: scale(1) rotateZ(0);
+  }
+  50% {
+    -webkit-transform: scale(2) rotateZ(180deg);
+    transform: scale(0.5) rotateZ(90deg);
+  }
+  100% {
+    -webkit-transform: scale(1) rotateZ(360deg);
+    transform: scale(1) rotateZ(180deg);
+  }
+}
+
