--- a/css/form.css
+++ b/css/form.css
@@ -2,9 +2,8 @@
   position: relative;
   z-index: 1;
   display: inline-block;
-  margin: 1em;
-  max-width: 350px;
-  width: calc(100% - 2em);
+  margin: 0.5em;
+  width: calc(100% - 3em);
   vertical-align: top;
 }
 
@@ -96,4 +95,18 @@
 .input--filled .graphic_liner {
   stroke: #9a9a9a;
   transform: translate3d(-66.6%, 0, 0);
+}
+
+.last {
+  margin-bottom: 2em;
+}
+
+
+form {
+  width: 50%;
+  align-self: center;
+}
+
+.form_button {
+  margin-bottom: 90px;
 }
